--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ button{
 .btnReset{
     background:url("oleksii-s-O2kqxbix4Mw-unsplash.jpg");
     padding-top: 10px;
-    color:whitesmoke;
+    color:#9AABD8;
     
 }
 
